<?xml version="1.0" encoding="UTF-8"?>
<!--
- Author: tlerios@marketcetera.com
- Since: 0.5.0
- Version: $Id$
- $License$
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.3.5.RELEASE</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>
  <!--parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent-->
  <groupId>org.marketcetera</groupId>
  <artifactId>public-parent</artifactId>
  <version>3.1.0</version>
  <packaging>pom</packaging>
  <name>Marketcetera Public Sources Parent POM</name>
  <description>The root of Marketcetera public sources.</description>
  <url>http://www.marketcetera.org</url>
  <licenses>
    <license>
      <name>GNU General Public License (GPL)</name>
      <url>http://www.gnu.org/licenses/gpl.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>team</id>
      <name>Marketcetera Team</name>
      <roles>
        <role>Owner</role>
      </roles>
    </developer>
  </developers>
  <properties>
    <java.version>1.8</java.version>
    <mvn.hazelcast.version>3.6.2</mvn.hazelcast.version>
    <mvn.test.options>-Xmx2048m -Xms128m -XX:MaxPermSize=512m</mvn.test.options>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSS Z</maven.build.timestamp.format>
  </properties>
  <dependencyManagement>
    <dependencies>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
      </plugins>
    </pluginManagement>
    <plugins>
    </plugins>
    <extensions>
    </extensions>
    <resources>
    </resources>
  </build>
  <profiles>
  </profiles>
  <modules>
    <module>core</module>
    <module>util</module>
    <module>util-test</module>
  </modules>
  <repositories>
  </repositories>
  <pluginRepositories>
  </pluginRepositories>
  <reporting>
  </reporting>
  <scm>
    <url>http://source.marketcetera.org/root/branches/3.1.x</url>
    <connection>scm:svn:http://source.marketcetera.org/root/branches/3.1.x</connection>
    <developerConnection>scm:svn:http://source.marketcetera.org/root/branches/3.1.x</developerConnection>
  </scm>
</project>
